clusters/homelab/apps/appflowy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appflowy
  labels:
    expose-public: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
