clusters/homelab/apps/appflowy/appflowy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appflowy-worker
  namespace: appflowy
spec:
  replicas: 1
  selector:
    matchLabels: { app: appflowy-worker }
  template:
    metadata:
      labels: { app: appflowy-worker }
    spec:
      containers:
        - name: appflowy-worker
          image: appflowyinc/appflowy_worker:0.16.5
